--- a/catalogue.yml
+++ b/catalogue.yml
@@ -36,7 +36,7 @@
 
   - name: download the catalogue package
     get_url:
-      url: curl -o /tmp/catalogue.zip https://roboshop-builds.s3.amazonaws.com/catalogue.zip
+      url: https://roboshop-builds.s3.amazonaws.com/catalogue.zip
       dest: /tmp
   
   - name: Unzip the package file
