--- a/web.yml
+++ b/web.yml
@@ -25,7 +25,7 @@
     
   - name: Extract the frontend content.
     unarchive:
-      path: /tmp/web.zip
+      src: /tmp/web.zip
       dest: /usr/share/nginx/html/
       remote_src: yes
 
