--- a/mysql.yml
+++ b/mysql.yml
@@ -24,5 +24,5 @@
   - name: change the default root password in order to start using the database service.
     command: mysql_secure_installation --set-root-pass RoboShop@1
 
-  - name:  check the new password working or not.
-    command: mysql -uroot -pRoboShop@1
+  # - name:  check the new password working or not.
+  #   command: mysql -uroot -pRoboShop@1
