--- a/payment.yml
+++ b/payment.yml
@@ -1,5 +1,7 @@
 - name: Configuring the payment application
   hosts: payment
+  vars:
+    USER: roboshop
   become: true
   tasks:
   - name: Install python 3.6
@@ -10,3 +12,58 @@
     - python36 
     - gcc 
     - python3-devel
+
+  - name: check application User roboshop existed or not
+    command: id {{USER}}
+    register: output
+    ignore_errors: true
+
+  - name: Create a user roboshop if not exit
+    user: 
+      name: "{{USER}}"
+    when: output.rc != 0
+
+  - name: Check an app directory exit or not.
+    stat:
+      path: /app
+    register: dir
+    
+
+  - name: Create a dir /app if not exit
+    file:
+      name: /app
+      state: directory
+    when: dir.stat.exists == False
+
+  - name: download the payment package
+    get_url:
+      url: https://roboshop-builds.s3.amazonaws.com/payment.zip
+      dest: /tmp
+  
+  - name: Unzip the package file
+    unarchive:
+      src: /tmp/payment.zip
+      dest: /app
+      remote_src: yes
+
+  - name: 
+    command: pip3.6 install -r requirements.txt
+    args:
+      chdir: /app
+
+  - name: Setup SystemD payment Service
+    copy: 
+      src: payment.service
+      dest: /etc/systemd/system/payment.service
+
+  - name: Reload the daemon_reload service
+    systemd:
+      daemon_reload: true
+  
+  - name: Enable & Start the service.
+    service:
+      name: payment
+      state: started
+      enabled: true
+
+  
