--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -3,13 +3,11 @@
   become: yes
   tasks:
   - name: Configure YUM Repos from the script provided by vendor.
-    command: curl -s https://packagecloud.io/install/repositories/rabbitmq/erlang/script.rpm.sh | bash
-    ignore_errors: true
-
-  - name: Configure YUM Repos for RabbitMQ.
-    command: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | bash
-    ignore_errors: true
-
+    shell: "{{item}}"
+    loop:
+    - "curl -s https://packagecloud.io/install/repositories/rabbitmq/erlang/script.rpm.sh | bash"
+    - "curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | bash"
+    
   - name: Install RabbitMQ
     yum:
       name: rabbitmq-server
